--- a/SharkFeed_XiaofenLiu/SharkFeed_XiaofenLiu/Base.lproj/Main.storyboard
+++ b/SharkFeed_XiaofenLiu/SharkFeed_XiaofenLiu/Base.lproj/Main.storyboard
@@ -364,6 +364,6 @@
         <image name="splash.jpg" width="236" height="352"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tBa-O2-9um"/>
+        <segue reference="LsS-aX-axY"/>
     </inferredMetricsTieBreakers>
 </document>
